# semantic-scraper

./: .gitignore  CHANGELOG.md  MILESTONES.md  Makefile  README.md  RELEASE_CHECKLIST.md  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: semis_guidance_surprise_v1.json
corpus/: README.md
data/: candidate-ranking-v3.jsonl
docs/: alpha_pilot_playbook.md  architecture.md  automated_evidence_harvester.md  evaluation_journal.md  evidence_intake_runbook.md  evidence_lifecycle.md  evidence_workflow.md  known_limitations.md  local_model_bakeoff_2026-05-23.md  m13r_false_positive_incident_report.md  m14_alpha2_validation_report.md  m14r_fresh_alpha_incident_report.md  m15_alpha3_public_readiness_report.md  m15r_public_alpha_incident_report.md  m15r_public_alpha_safety_report.md  m16r_founder_external_incident_report.md  m16u_safe_coverage_recovery_report.md  m16w_founder_wide_report.md  m16w_r_candidate_recall_incident_report.md  m16w_r_false_positive_incident_report.md  m17s_harvester_scale_report.md  m18_review_queue_conversion_report.md  m18b_oracle_label_acquisition_report.md  m19_evidence_driven_update_report.md  m19r_ranker_regression_diagnosis.md  m20_safety_veto_report.md  m20p_veto_promotion_readiness_report.md  m21_veto_distillation_report.md  m22_trap_only_veto_promotion_trial.md  m22e_trap_only_veto_evaluation_report.md  outside_user_cohort_protocol.md  policies.md  public_alpha.md  reason_codes.md  rules.md  semis_guidance_surprise_v1.md  writing_domain_packs.md
examples/: article.yml  article_v1.html  product.yml  product_v1.html  (+1 more)
(+172 files in other folders)
